# isaac_ros_benchmark

./: .gitattributes  .gitignore  .lfsconfig  README.md
benchmarks/isaac_ros_moveit_benchmark/robot_descriptions/ur5_robotiq_85_description/: CMakeLists.txt  package.xml
benchmarks/isaac_ros_moveit_benchmark/robot_descriptions/ur5_robotiq_85_description/meshes/: robotiq_fts300.stl
benchmarks/isaac_ros_moveit_benchmark/robot_descriptions/ur5_robotiq_85_description/meshes/robotiq/: inner_finger_coarse.stl  inner_finger_fine.stl  inner_knuckle_coarse.stl  inner_knuckle_fine.stl  outer_finger_coarse.stl  outer_finger_fine.stl  outer_knuckle_coarse.stl  outer_knuckle_fine.stl  robotiq_85_base_link_coarse.stl  robotiq_85_base_link_fine.stl
benchmarks/isaac_ros_moveit_benchmark/robot_descriptions/ur5_robotiq_85_description/meshes/ur5/collision/: base.stl
benchmarks/isaac_ros_moveit_benchmark/robot_descriptions/ur5_robotiq_85_description/meshes/ur5/visual/: base.dae  shoulder.dae  wrist1.dae  wrist2.dae  wrist3.dae
benchmarks/isaac_ros_moveit_benchmark/robot_descriptions/ur5_robotiq_85_description/urdf/: ur5_robotiq_85.urdf  ur5_robotiq_85_spherized.urdf
isaac_ros_benchmark/: CMakeLists.txt  package.xml
isaac_ros_benchmark/config/: centerpose_decoder_params.yaml  ketchup_config.pbtxt  peoplenet_config.pbtxt  peoplesemsegnet_shuffleseg_config.pbtxt
isaac_ros_benchmark/include/isaac_ros_benchmark/: nitros_monitor_node.hpp  nitros_playback_node.hpp
isaac_ros_benchmark/isaac_ros_benchmark/: __init__.py  isaac_ros_tensor_utility.py  model_converter.py  nitros_monitor_utility.py
isaac_ros_benchmark/src/: nitros_monitor_node.cpp  nitros_playback_node.cpp
isaac_ros_benchmark/test/: nitros_monitor_node_pol.py  nitros_playback_node_pol.py
isaac_ros_benchmark/test/pol.bag/: metadata.yaml
results/: apriltag_ros_apriltag_graph-agx_orin.json  apriltag_ros_apriltag_graph-agx_xavier.json  apriltag_ros_apriltag_graph-dgx_spark.json  apriltag_ros_apriltag_graph-nuc_3060ti.json  apriltag_ros_apriltag_graph-nuc_4060ti.json  apriltag_ros_apriltag_graph-orin_nx.json  apriltag_ros_apriltag_graph-thor-t4000.json  apriltag_ros_apriltag_graph-x86-5090.json  apriltag_ros_apriltag_graph-x86_4090.json  apriltag_ros_apriltag_node-agx_orin.json  apriltag_ros_apriltag_node-agx_xavier.json  apriltag_ros_apriltag_node-dgx_spark.json  apriltag_ros_apriltag_node-nuc_3060ti.json  apriltag_ros_apriltag_node-nuc_4060ti.json  apriltag_ros_apriltag_node-orin_nx.json  apriltag_ros_apriltag_node-thor-t4000.json  apriltag_ros_apriltag_node-x86-5090.json  apriltag_ros_apriltag_node-x86_4090.json  image_proc_rectify_node-agx_orin.json  image_proc_rectify_node-agx_thor.json  image_proc_rectify_node-agx_xavier.json  image_proc_rectify_node-dgx_spark.json  image_proc_rectify_node-nuc_3060ti.json  image_proc_rectify_node-nuc_4060ti.json  image_proc_rectify_node-orin_nx.json  image_proc_rectify_node-thor-t4000.json  image_proc_rectify_node-x86-5090.json  image_proc_rectify_node-x86_4090.json  image_transport_h264_decoder_node-agx_orin.json  image_transport_h264_decoder_node-agx_xavier.json  image_transport_h264_decoder_node-nuc_3060ti.json  image_transport_h264_decoder_node-nuc_4060ti.json  image_transport_h264_decoder_node-orin_nx.json  image_transport_h264_decoder_node-x86_4090.json  image_transport_h264_encoder_node-agx_orin.json  (+538 more)
(+224 files in other folders)
